--- a/public/game.html
+++ b/public/game.html
@@ -26,6 +26,8 @@
     <script defer src="js/script.js"></script>
   </head>
   <body>
+    <button id="help" class="btn" data-bs-toggle="modal" data-bs-target="#helpModal">HELP!</button>
+
     <div class="timer" id="timer">0</div>
     <div class="score" id="score">0</div>
 
@@ -54,7 +56,13 @@
               <!-- tenten & maru -->
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="enableTenTenAndMaru">
-                <label class="form-check-label" for="enableTenTenAndMaru">Enable tenten & maru</label>
+                <label class="form-check-label" for="enableTenTenAndMaru">Enable tenten & maru (ば, ぱ,...)</label>
+              </div>
+
+              <!-- time limit -->
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="enableCombination">
+                <label class="form-check-label" for="enableCombination">Enable Combination (きゃ, みゅ, しょ,...)</label>
               </div>
 
               <!-- time limit -->
@@ -62,6 +70,25 @@
                 <input class="form-check-input" type="checkbox" id="enableTimeLimit">
                 <label class="form-check-label" for="enableTimeLimit">Enable time limit</label>
               </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button id="saveSetting" type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Help Modal -->
+      <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="helpModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="helpModalTitle">Hiragana Alphabet</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <img src="img/hiragana.gif" class="img-fluid" alt="hiragana-alphabet" />
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
