add title for index

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,11 @@
   <body>
     <div class="container">
       <div class="main mt-5 text-center">
-        <a href="game.html" style="font-size: 3rem">Play Game</a>
+        <h1 style="font-size: 4rem;">Hiragana Practice Memory</h1>
+
+        <a href="game.html" style="font-size: 2rem">Play Game</a>
         <br />
-        <a href="leaderboard.html" style="font-size: 3rem">Leaderboard</a>
+        <a href="leaderboard.html" style="font-size: 2rem">Leaderboard</a>
       </div>
     </div>
   </body>
