--- a/public/game.html
+++ b/public/game.html
@@ -85,7 +85,7 @@
               <!-- small tsu -->
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" id="enableSmallTsu">
-                <label class="form-check-label" for="enableSmallTsu">Enable small tsu (っ)</label>
+                <label class="form-check-label" for="enableSmallTsu">Enable small tsu (っ, ッ)</label>
               </div>
 
               <!-- time limit -->
