--- a/public/game.html
+++ b/public/game.html
@@ -12,14 +12,14 @@
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.3.3/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/8.3.3/firebase-auth.js"></script>
-    <script defer src="/__/firebase/8.3.3/firebase-database.js"></script>
+<!--    <script defer src="/__/firebase/8.3.3/firebase-auth.js"></script>-->
+<!--    <script defer src="/__/firebase/8.3.3/firebase-database.js"></script>-->
     <script defer src="/__/firebase/8.3.3/firebase-messaging.js"></script>
     <script defer src="/__/firebase/8.3.3/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
     <!-- my script -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     <script src="https://unpkg.com/@popperjs/core@2"></script>
 
     <script defer src="js/bootstrap.bundle.min.js" ></script>
