--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>N5 Learning - Home</title>
+    <meta name="description" content="Help you learning and practice to remember Hiragana and Katakana"/>
 
     <!-- update the version number as needed -->
     <!-- <script defer src="/__/firebase/8.3.3/firebase-app.js"></script> -->
@@ -22,7 +23,7 @@
   <body>
     <div class="container">
       <div class="main mt-5 text-center">
-        <h1 style="font-size: 4rem;">Hiragana Practice Memory</h1>
+        <h1 style="font-size: 3.4rem;">Hiragana & Katakana Practice</h1>
 
         <a href="game.html" style="font-size: 2.2rem">Play Game</a>
         <br />
