--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
 
         <a href="game.html" style="font-size: 2.2rem">Play Game</a>
         <br />
+        <a href="geemu.html".html" style="font-size: 2.2rem">-> ゲーム <-</a>
+        <br />
         <a href="leaderboard.html" style="font-size: 2.2rem">Leaderboard</a>
       </div>
     </div>
